--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,3 @@
-/* Estilo básico */
 body {
     color: #e7e7e7;
     display: flex;
@@ -8,10 +7,13 @@ body {
     min-height: 100vh;
     margin: 0;
     background-color: #000000e5;
-
+    padding-bottom: 50px;
+    padding-top: 0;
+    overflow: hidden;
 }
 
 .container {
+    max-height: 90vh;
     gap: 10%;
     align-items: center;
     display: flex;
@@ -23,6 +25,8 @@ body {
     max-width: 800px;
     box-sizing: border-box;
     padding-bottom: 50px;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
 .left-panel, .right-panel {
@@ -79,13 +83,17 @@ body {
     margin-left: 10px;
 }
 
-/* Caixa de preço */
 .price-box {
+    margin-right: 5;
     display: flex;
     align-items: center;
     font-size: 1.2em;
     color: #ffffff;
     margin-right: px;
+    min-width: 50px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 .cookie-icon {
@@ -99,7 +107,8 @@ body {
     margin-right: 5%;
     display: flex;
     gap: 10px;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .button {
@@ -111,15 +120,15 @@ body {
     font-size: 0.9em; 
 }
 
-.button:active {
+.button-active:active {
     box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
   }
 
-  .button-true:hover {
+  .button-true-hover:hover {
     background-color: #bdeecb;
   }
 
-  .button-false:hover {
+  .button-false-hover:hover {
     background-color: #eeccbd;
   }
 
@@ -149,11 +158,14 @@ footer {
     padding: 10px 0;
     font-size: 1em;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     gap: 10px;
-    position: fixed;
-    bottom: 0;
-    z-index: 10;
+    position: absolute;
+    top: auto;
+    right: 10px;
+    bottom: 10px;
+    z-index: 30;
+    margin-top: 0;
 }
 
 footer img {
@@ -161,13 +173,13 @@ footer img {
     height: 40px;
 }
 
-
-/* Responsividade*/
 @media (max-width: 768px) {
     .container {
+        max-width: 100%;
         flex-direction: column;
         align-items: center;
         padding-bottom: 80px;
+        margin-bottom: 40px;
     }
 
     .left-panel, .right-panel {
@@ -196,6 +208,11 @@ footer img {
 }
 
 @media (max-width: 480px) {
+
+    .container {
+        max-width: 100%;
+        margin-bottom: 60px;
+    }
 
     .item-info{
         margin: 0;
