--- a/styles/index.css
+++ b/styles/index.css
@@ -48,6 +48,23 @@ body {
     margin: 20px 0;
 }
 
+
+.upscale {
+    animation: upscale 0.1s forwards;
+}
+
+@keyframes upscale {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.05);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
 .right-panel {
     flex: 2;
     width: 100%;
