ajuste cor de fundo

--- a/styles/index.css
+++ b/styles/index.css
@@ -6,7 +6,7 @@ body {
     justify-content: center;
     min-height: 100vh;
     margin: 0;
-    background-color: #000000e5;
+    background-color: #122533;
     padding-bottom: 50px;
     padding-top: 0;
     overflow: hidden; /* Sem scroll por padrão */
